--- a/html/package.json
+++ b/html/package.json
@@ -39,5 +39,9 @@
 		"vinyl-source-stream": "^2.0.0",
 		"yargs": "^12.0.1"
 	},
+	"browserslist": [
+		"last 2 versions",
+		"iOS > 8"
+	],
 	"sasslintConfig": "sass-lint.yml"
 }
