--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ bld/
 # Visual Studio 2015 cache/options directory
 .vs/
 
+# Rider directory
+.idea/
+
 # ReSharper is a .NET coding add-in
 _ReSharper*/
 *.[Rr]e[Ss]harper
