Added view models for article container and articles

--- a/Patrija.Core/Patrija.Core.csproj
+++ b/Patrija.Core/Patrija.Core.csproj
@@ -313,6 +313,8 @@
     <Compile Include="ViewModels\Partials\Listing\PaginationViewModel.cs" />
     <Compile Include="ViewModels\Partials\Listing\SearchResultsItemViewModel.cs" />
     <Compile Include="ViewModels\Shared\AlternateLinkViewModel.cs" />
+    <Compile Include="ViewModels\Shared\ArticleContainerViewModel.cs" />
+    <Compile Include="ViewModels\Shared\ArticleViewModel.cs" />
     <Compile Include="ViewModels\Shared\ImageViewModel.cs" />
     <Compile Include="ViewModels\Shared\LinkViewModel.cs" />
   </ItemGroup>
