--- a/Patrija.Core/Patrija.Core.csproj
+++ b/Patrija.Core/Patrija.Core.csproj
@@ -308,6 +308,7 @@
     <Compile Include="ViewModels\Partials\Features\ContentPosition.cs" />
     <Compile Include="ViewModels\Partials\Features\FeatureViewModel.cs" />
     <Compile Include="ViewModels\Partials\Features\TaggedFeatureViewModel.cs" />
+    <Compile Include="ViewModels\Partials\Home\AboutUsViewModel.cs" />
     <Compile Include="ViewModels\Partials\Home\HomeIntroViewModel.cs" />
     <Compile Include="ViewModels\Partials\Home\LinksListViewModel.cs" />
     <Compile Include="ViewModels\Partials\Layout\FooterViewModel.cs" />
