Added about us PageIntro

--- a/Patrija.Common/Patrija.Common.csproj
+++ b/Patrija.Common/Patrija.Common.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Constants.cs" />
     <Compile Include="Extensions\StringBuilderExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Guard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
