--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -436,6 +436,8 @@
     <Content Include="config\Lang\zh-CN.user.xml" />
     <Content Include="config\logviewer.searches.config.js" />
     <Content Include="Global.asax" />
+    <Content Include="Views\AboutUsPage.cshtml" />
+    <Content Include="Views\Partials\NestedContent\_PageIntro.cshtml" />
     <Content Include="Views\Partials\NestedContent\_TaggedFeature.cshtml" />
     <Content Include="Views\Partials\Shared\_Link.cshtml" />
     <Content Include="Web.config">
@@ -444,7 +446,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="DisplayHelpers\SupportContentBoxButtonType.cs" />
+    <Compile Include="DisplayHelpers\Dictionaries.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Web.config" />
