--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -482,9 +482,10 @@
     <Content Include="Views\Partials\Grid\Bootstrap3-Fluid.cshtml" />
     <Content Include="Views\Partials\NestedContent\_HomeIntro.cshtml" />
     <Content Include="Views\Partials\NestedContent\_LinksList.cshtml" />
-    <Content Include="Views\Partials\NestedContent\_HomeSupport.cshtml" />
     <Content Include="Views\Partials\Shared\_JoinUs.cshtml" />
     <Content Include="Views\Partials\NestedContent\_AboutUs.cshtml" />
+    <Content Include="Views\Partials\Containers\_HomeSupportContainer.cshtml" />
+    <Content Include="Views\Partials\Containers\_AboutUsProjectsContainer.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
