--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -502,6 +502,7 @@
     <Content Include="Views\Partials\NestedContent\_TextBlock.cshtml" />
     <Content Include="Views\Partials\Shared\_TestimonialItem.cshtml" />
     <Content Include="Views\Partials\Shared\_TestimonialContainer.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\ImageContainerViewModel.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
