--- a/Patrija.Web/Web.config
+++ b/Patrija.Web/Web.config
@@ -53,7 +53,13 @@
 		<add key="Umbraco.ModelsBuilder.ModelsNamespace" value="Patrija.Models.Generated" />
 		<add key="Umbraco.ModelsBuilder.LanguageVersion" value="CSharp7" />
 		<add key="Umbraco.ModelsBuilder.EnableApi" value="true" />
-	</appSettings>
+
+    <add key="emailSmtpHost" value="smtp.gmail.com"/>
+    <add key="emailSmtpPort" value="587"/>
+    <add key="emailSourceAdddress" value="patrija.dev.from@gmail.com"/>
+    <add key="emailSourcePassword" value="patrija123"/>
+	  <add key="emailDestinationAdddress" value="patrija.dev.to@gmail.com"/>
+  </appSettings>
 
 	<!--
     Important: If you're upgrading Umbraco, do not clear the connection
