--- a/Patrija.Models/Patrija.Models.csproj
+++ b/Patrija.Models/Patrija.Models.csproj
@@ -397,6 +397,12 @@
     <Compile Include="Generated\BlogItem.generated.cs">
       <DependentUpon>ModelsBuilder.cs</DependentUpon>
     </Compile>
+    <Compile Include="Generated\ContactMap.generated.cs">
+      <DependentUpon>ModelsBuilder.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Generated\ContactUs.generated.cs">
+      <DependentUpon>ModelsBuilder.cs</DependentUpon>
+    </Compile>
     <Compile Include="Generated\Donations.generated.cs">
       <DependentUpon>ModelsBuilder.cs</DependentUpon>
     </Compile>
