Removed sensitive data from files

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,5 @@ html/*.html
 /Patrija.Web/assets/fonts/svgicons.ttf
 /Patrija.Web/assets/fonts/svgicons.woff
 /Patrija.Web/assets/fonts/svgicons.woff2
+/ReadMe.txt
+/Patrija.Web/ConnectionStrings.config
