--- a/Patrija.Web/Web.config
+++ b/Patrija.Web/Web.config
@@ -61,13 +61,10 @@
 	  <add key="emailDestinationAdddress" value="patrija.dev.to@gmail.com"/>
   </appSettings>
 
-	<!--
-    Important: If you're upgrading Umbraco, do not clear the connection
-    string / provider name during your web.config merge.
-  -->
-	<connectionStrings>
-	<add name="umbracoDbDSN" connectionString="server=52.143.162.116;database=Patrija;user id=Patrija;password='H@katon20!9'" providerName="System.Data.SqlClient" /></connectionStrings>
 
+	<connectionStrings configSource="ConnectionStrings.config">
+	</connectionStrings>
+	
 	<system.data>
 		<DbProviderFactories>
 			<remove invariant="System.Data.SqlServerCe.4.0" />
