--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -435,6 +435,7 @@
     <Content Include="config\Lang\sv-SE.user.xml" />
     <Content Include="config\Lang\zh-CN.user.xml" />
     <Content Include="config\logviewer.searches.config.js" />
+    <Content Include="ConnectionStrings.config" />
     <Content Include="Global.asax" />
     <Content Include="Views\AboutUsPage.cshtml" />
     <Content Include="Views\Partials\NestedContent\_ImageWithText.cshtml" />
