--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -513,8 +513,8 @@
     <Content Include="Views\Partials\NestedContent\_Donations.cshtml" />
     <Content Include="Views\Partials\Shared\_FormWithoutDescription.cshtml" />
     <Content Include="Views\JoinUsPage.cshtml" />
-    <Content Include="Views\Partials\NestedContent\_BlogContent.cshtml" />
-    <Content Include="Views\BlogPage.cshtml" />
+    <Content Include="Views\BlogArticle.cshtml" />
+    <Content Include="Views\Partials\NestedContent\_BlogArticleContent.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
