--- a/Patrija.Web/Patrija.Web.csproj
+++ b/Patrija.Web/Patrija.Web.csproj
@@ -516,6 +516,15 @@
     <Content Include="Views\Partials\NestedContent\_BlogContent.cshtml" />
     <Content Include="Views\BlogPage.cshtml" />
     <Content Include="Views\Partials\NestedContent\_ContactForm.cshtml" />
+    <Content Include="Views\Partials\NestedContent\_Donations.cshtml" />
+    <Content Include="Views\Partials\Shared\_FormWithoutDescription.cshtml" />
+    <Content Include="Views\JoinUsPage.cshtml" />
+    <Content Include="Views\Partials\NestedContent\_BlogContent.cshtml" />
+    <Content Include="Views\BlogPage.cshtml" />
+    <Content Include="Views\News.cshtml" />
+    <Content Include="Views\Partials\Shared\_NewsBlogBlockLatestArticleInFocus.cshtml" />
+    <Content Include="Views\Partials\Shared\_NewsBlogBlockTwoColumnThreeRows.cshtml" />
+    <Content Include="Views\Partials\Shared\_NewsBlogBlockThreeColumnTwoRows.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -540,6 +549,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Views\Home\" />
+    <Folder Include="Views\MacroPartials\" />
     <Folder Include="Views\Shared\EditorTemplates\" />
   </ItemGroup>
   <PropertyGroup>
