--- a/Patrija.Web/AppSettings.config
+++ b/Patrija.Web/AppSettings.config
@@ -1,4 +1,9 @@
 ﻿<!-- Site configuration -->
 <!-- NOTE: Changes to this file won't automatically restart the Web application! -->
 <appSettings>
+  <add key="emailSmtpHost" value="smtp.gmail.com"/>
+  <add key="emailSmtpPort" value="587"/>
+  <add key="emailSourceAdddress" value="patrija.dev.from@gmail.com"/>
+  <add key="emailSourcePassword" value="patrija123"/>
+  <add key="emailDestinationAdddress" value="patrija.dev.to@gmail.com"/>
 </appSettings>
